force-app/main/default/objects/AccountingDetail__c/AccountingDetail__c.object-meta.xml
<CustomObject>
    <label>請求・支払明細</label>
    <nameField>
        <displayFormat>ACD-{00000000}</displayFormat>
        <label>請求・支払明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>