force-app/main/default/objects/AccountingDetail__c/fields/AccountingType__c.field-meta.xml
<CustomField>
    <fullName>AccountingType__c</fullName>
    <label>収支区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>収入</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>支出</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>