force-app/main/default/objects/AccountingDetail__c/fields/AccountItem__c.field-meta.xml
<CustomField>
    <fullName>AccountItem__c</fullName>
    <label>勘定科目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1_90</fullName>
                <label>売掛_10%課税</label>
            </value>
            <value>
                <fullName>1_91</fullName>
                <label>売掛_8%課税</label>
            </value>
            <value>
                <fullName>1_92</fullName>
                <label>売掛_非課税</label>
            </value>
            <value>
                <fullName>2_90</fullName>
                <label>買掛_10%課税</label>
            </value>
            <value>
                <fullName>2_91</fullName>
                <label>買掛_8%課税</label>
            </value>
            <value>
                <fullName>2_92</fullName>
                <label>買掛_非課税</label>
            </value>
            <value>
                <fullName>4_10</fullName>
                <label>雑収入</label>
            </value>
            <value>
                <fullName>5_10</fullName>
                <label>仕入</label>
            </value>
            <value>
                <fullName>5_20</fullName>
                <label>支払手数料</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>