force-app/main/default/objects/AccountingDetail__c/fields/AccountItemAPI__c.field-meta.xml
<CustomField>
    <fullName>AccountItemAPI__c</fullName>
    <formula>TEXT(AccountItem__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>勘定科目(API)</label>
    <type>Text</type>
</CustomField>