force-app/main/default/objects/AccountingDetail__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>金額</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>