force-app/main/default/objects/AccountingDetail__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <label>締め日</label>
    <type>Date</type>
</CustomField>