force-app/main/default/objects/AccountingDetail__c/fields/ConsumptionTaxRate__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionTaxRate__c</fullName>
    <label>消費税率</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>