force-app/main/default/objects/AccountingDetail__c/fields/InvoiceAccount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountingDetailInvoiceAccountList</relationshipName>
    <type>Lookup</type>
</CustomField>