force-app/main/default/objects/AccountingDetail__c/fields/OrderHeader__c.field-meta.xml
<CustomField>
    <fullName>OrderHeader__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>注文</label>
    <referenceTo>OrderHeader__c</referenceTo>
    <relationshipName>AccountingDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>