force-app/main/default/objects/AccountingDetail__c/fields/OtherPaymentDetail__c.field-meta.xml
<CustomField>
    <fullName>OtherPaymentDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>その他支払明細</label>
    <referenceTo>PaymentDetail__c</referenceTo>
    <relationshipLabel>請求・支払明細</relationshipLabel>
    <relationshipName>AccountingDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>