force-app/main/default/objects/AccountingDetail__c/fields/PrevTermStockQuantity__c.field-meta.xml
<CustomField>
    <fullName>PrevTermStockQuantity__c</fullName>
    <label>前期在庫数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>