force-app/main/default/objects/AccountingDetail__c/fields/ProductMaster__c.field-meta.xml
<CustomField>
    <fullName>ProductMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>商品マスタ</label>
    <referenceTo>ProductMaster__c</referenceTo>
    <relationshipName>AccountingDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>