force-app/main/default/objects/AccountingDetail__c/fields/ReceivablePayableDetail__c.field-meta.xml
<CustomField>
    <fullName>ReceivablePayableDetail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>その他請求明細</label>
    <referenceTo>ReceivableDetail__c</referenceTo>
    <relationshipLabel>請求・支払明細</relationshipLabel>
    <relationshipName>AccountingDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>