force-app/main/default/objects/AccountingDetail__c/fields/ReimbursementDetail__c.field-meta.xml
<CustomField>
    <fullName>ReimbursementDetail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>弁償・立替</label>
    <referenceTo>ReimbursementDetail__c</referenceTo>
    <relationshipLabel>請求・支払明細</relationshipLabel>
    <relationshipName>AccountingDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>