force-app/main/default/objects/AccountingDetail__c/fields/ReportTaxable__c.field-meta.xml
<CustomField>
    <fullName>ReportTaxable__c</fullName>
    <description>帳票用</description>
    <label>課税計用</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>