force-app/main/default/objects/AccountingDetail__c/fields/TermArrivedQuantity__c.field-meta.xml
<CustomField>
    <fullName>TermArrivedQuantity__c</fullName>
    <label>期入庫数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>