force-app/main/default/objects/AccountingDetail__c/fields/TermCycleStartDate__c.field-meta.xml
<CustomField>
    <fullName>TermCycleStartDate__c</fullName>
    <label>期制の開始日</label>
    <type>Date</type>
</CustomField>