force-app/main/default/objects/AccountingDetail__c/fields/TermShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>TermShippedQuantity__c</fullName>
    <label>期出庫数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>