force-app/main/default/objects/AccountingDetail__c/validationRules/CannotUpdateAfterInvoicConfirmed.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotUpdateAfterInvoicConfirmed</fullName>
    <active>true</active>
    <description>請求書の「状態：処理済み」の場合、「請求・支払明細」は変更できません。</description>
    <errorConditionFormula>NOT( ISNEW() )
&amp;&amp;
ISPICKVAL(InvoiceDocument__r.Status__c, &apos;Confirmed&apos;)</errorConditionFormula>
    <errorMessage>請求書の「状態：処理済み」の場合、「請求・支払明細」は変更できません。</errorMessage>
</ValidationRule>