force-app/main/default/objects/AccountingDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InvoiceDocument__c</columns>
    <columns>Item__c</columns>
    <columns>InvoiceAccount__c</columns>
    <columns>OrderHeader__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>